--- a/fav-tools/我工作中常用的开发/工具软件-windows/index.html
+++ b/fav-tools/我工作中常用的开发/工具软件-windows/index.html
@@ -17,21 +17,21 @@
   <title>我工作中常用的开发/工具软件 [Windows] &middot; Jumping</title>
 
   
-<link rel="canonical" href="https://wjpdeveloper.github.io/fav-tools/%E6%88%91%E5%B7%A5%E4%BD%9C%E4%B8%AD%E5%B8%B8%E7%94%A8%E7%9A%84%E5%BC%80%E5%8F%91/%E5%B7%A5%E5%85%B7%E8%BD%AF%E4%BB%B6-windows/" />
-<link rel="apple-touch-icon" sizes="180x180" href="https://wjpdeveloper.github.io/favicon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://wjpdeveloper.github.io/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="https://wjpdeveloper.github.io/favicon/favicon-16x16.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://wjpdeveloper.github.io/favicon/apple-icon-precomposed.png">
+<link rel="canonical" href="http://wjpdeveloper.github.io/fav-tools/%E6%88%91%E5%B7%A5%E4%BD%9C%E4%B8%AD%E5%B8%B8%E7%94%A8%E7%9A%84%E5%BC%80%E5%8F%91/%E5%B7%A5%E5%85%B7%E8%BD%AF%E4%BB%B6-windows/" />
+<link rel="apple-touch-icon" sizes="180x180" href="http://wjpdeveloper.github.io/favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="32x32" href="http://wjpdeveloper.github.io/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="http://wjpdeveloper.github.io/favicon/favicon-16x16.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://wjpdeveloper.github.io/favicon/apple-icon-precomposed.png">
 
 
-<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/css/print.css" media="print">
-<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/css/poole.css">
-<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/css/syntax.css">
-<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/css/hyde.css">
-<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/lib/highlight/styles/atom-one-dark.css">\
-<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/css/style.css">
+<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/css/print.css" media="print">
+<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/css/poole.css">
+<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/css/syntax.css">
+<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/css/hyde.css">
+<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/lib/highlight/styles/atom-one-dark.css">
+<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/css/style.css">
 
-<link href="https://wjpdeveloper.github.io/lib/fancybox/jquery.fancybox-3.5.7.min.css" rel="stylesheet">
+<link href="http://wjpdeveloper.github.io/lib/fancybox/jquery.fancybox-3.5.7.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -52,7 +52,7 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="https://wjpdeveloper.github.io/"><h1>Jumping</h1></a>
+      <a href="http://wjpdeveloper.github.io/"><h1>Jumping</h1></a>
       <p class="lead">
        Wang jiangping&#39;s personal Notebook 
       </p>
@@ -60,8 +60,8 @@
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="https://wjpdeveloper.github.io/">首页</a> </li>
-        <li><a href="https://wjpdeveloper.github.io/focus-tech/"> 技术 </a></li><li><a href="https://wjpdeveloper.github.io/live-mylife/"> 生活 </a></li><li><a href="https://wjpdeveloper.github.io/fav-tools/"> 工具 </a></li><li><a href="https://wjpdeveloper.github.io/categories/"> 分类 </a></li><li><a href="https://wjpdeveloper.github.io/tags/"> 标签 </a></li>
+        <li><a href="http://wjpdeveloper.github.io/">首页</a> </li>
+        <li><a href="http://wjpdeveloper.github.io/focus-tech/"> 技术 </a></li><li><a href="http://wjpdeveloper.github.io/live-mylife/"> 生活 </a></li><li><a href="http://wjpdeveloper.github.io/fav-tools/"> 工具 </a></li><li><a href="http://wjpdeveloper.github.io/categories/"> 分类 </a></li><li><a href="http://wjpdeveloper.github.io/tags/"> 标签 </a></li>
       </ul>
     </nav>
 
@@ -326,7 +326,7 @@ SSH/FTP/SFTP功能，没开IDEA时辅助使用。</p>
 
 <h2 id="30-docker">30. Docker</h2>
 
-<p>到现在如果开发还没有用到Docker，就out了。
+<p>大势所趋，现在开发、测试、布署早已离不开Docker。极大提高了生产力。
 <img src="https://timgsa.baidu.com/timg?image&amp;quality=80&amp;size=b9999_10000&amp;sec=1567513487787&amp;di=81ba99a83c989d4c36b4a1daa1f5617a&amp;imgtype=0&amp;src=http%3A%2F%2Fwww.fimvisual.com%2Fwp-content%2Fuploads%2F2016%2F10%2F1459029166.png" alt="" /></p>
 
 <p>下载地址: <a href="https://www.docker.com/">https://www.docker.com/</a></p>
@@ -354,13 +354,13 @@ SSH/FTP/SFTP功能，没开IDEA时辅助使用。</p>
       <span>TOP</span>
     </div>
   
-<script src="https://wjpdeveloper.github.io/lib/highlight/highlight.min.js"></script>
+<script src="http://wjpdeveloper.github.io/lib/highlight/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
-<script type="text/javascript" src="https://wjpdeveloper.github.io/lib/jquery/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="https://wjpdeveloper.github.io/lib/slideout/slideout-1.0.1.min.js"></script>
-<script type="text/javascript" src="https://wjpdeveloper.github.io/lib/fancybox/jquery.fancybox-3.5.7.min.js"></script>
-<script src="https://wjpdeveloper.github.io/js/main.js"></script>
+<script type="text/javascript" src="http://wjpdeveloper.github.io/lib/jquery/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="http://wjpdeveloper.github.io/lib/slideout/slideout-1.0.1.min.js"></script>
+<script type="text/javascript" src="http://wjpdeveloper.github.io/lib/fancybox/jquery.fancybox-3.5.7.min.js"></script>
+<script src="http://wjpdeveloper.github.io/js/main.js"></script>
 
   </body>
 </html>
