--- a/404.html
+++ b/404.html
@@ -17,21 +17,21 @@
   <title>404 Page not found &middot; Jumping</title>
 
   
-<link rel="canonical" href="http://wjpdeveloper.github.io/404.html" />
-<link rel="apple-touch-icon" sizes="180x180" href="http://wjpdeveloper.github.io/favicon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="32x32" href="http://wjpdeveloper.github.io/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="http://wjpdeveloper.github.io/favicon/favicon-16x16.png">
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://wjpdeveloper.github.io/favicon/apple-icon-precomposed.png">
+<link rel="canonical" href="https://wjpdeveloper.github.io/404.html" />
+<link rel="apple-touch-icon" sizes="180x180" href="https://wjpdeveloper.github.io/favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://wjpdeveloper.github.io/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="https://wjpdeveloper.github.io/favicon/favicon-16x16.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://wjpdeveloper.github.io/favicon/apple-icon-precomposed.png">
 
 
-<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/css/print.css" media="print">
-<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/css/poole.css">
-<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/css/syntax.css">
-<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/css/hyde.css">
-<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/lib/highlight/styles/atom-one-dark.css">
-<link type="text/css" rel="stylesheet" href="http://wjpdeveloper.github.io/css/style.css">
+<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/css/print.css" media="print">
+<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/css/poole.css">
+<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/css/syntax.css">
+<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/css/hyde.css">
+<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/lib/highlight/styles/atom-one-dark.css">
+<link type="text/css" rel="stylesheet" href="https://wjpdeveloper.github.io/css/style.css">
 
-<link href="http://wjpdeveloper.github.io/lib/fancybox/jquery.fancybox-3.5.7.min.css" rel="stylesheet">
+<link href="https://wjpdeveloper.github.io/lib/fancybox/jquery.fancybox-3.5.7.min.css" rel="stylesheet">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Abril+Fatface|PT+Sans:400,400i,700">
 
 
@@ -52,7 +52,7 @@
   <aside class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
-      <a href="http://wjpdeveloper.github.io/"><h1>Jumping</h1></a>
+      <a href="https://wjpdeveloper.github.io/"><h1>Jumping</h1></a>
       <p class="lead">
        Wang jiangping&#39;s personal Notebook 
       </p>
@@ -60,8 +60,8 @@
 
     <nav>
       <ul class="sidebar-nav">
-        <li><a href="http://wjpdeveloper.github.io/">首页</a> </li>
-        <li><a href="http://wjpdeveloper.github.io/focus-tech/"> 技术 </a></li><li><a href="http://wjpdeveloper.github.io/live-mylife/"> 生活 </a></li><li><a href="http://wjpdeveloper.github.io/fav-tools/"> 工具 </a></li><li><a href="http://wjpdeveloper.github.io/categories/"> 分类 </a></li><li><a href="http://wjpdeveloper.github.io/tags/"> 标签 </a></li>
+        <li><a href="https://wjpdeveloper.github.io/">首页</a> </li>
+        <li><a href="https://wjpdeveloper.github.io/focus-tech/"> 技术 </a></li><li><a href="https://wjpdeveloper.github.io/live-mylife/"> 生活 </a></li><li><a href="https://wjpdeveloper.github.io/fav-tools/"> 工具 </a></li><li><a href="https://wjpdeveloper.github.io/categories/"> 分类 </a></li><li><a href="https://wjpdeveloper.github.io/tags/"> 标签 </a></li>
       </ul>
     </nav>
 
@@ -74,7 +74,7 @@
       <div class="content-wrapper">
         <div class="content container">
           <h1>404: Page not found</h1>
-<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="http://wjpdeveloper.github.io/">Head back home</a> to try finding it again.</p>
+<p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="https://wjpdeveloper.github.io/">Head back home</a> to try finding it again.</p>
         </div>
 
         
@@ -86,13 +86,13 @@
       <span>TOP</span>
     </div>
   
-<script src="http://wjpdeveloper.github.io/lib/highlight/highlight.min.js"></script>
+<script src="https://wjpdeveloper.github.io/lib/highlight/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 
-<script type="text/javascript" src="http://wjpdeveloper.github.io/lib/jquery/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="http://wjpdeveloper.github.io/lib/slideout/slideout-1.0.1.min.js"></script>
-<script type="text/javascript" src="http://wjpdeveloper.github.io/lib/fancybox/jquery.fancybox-3.5.7.min.js"></script>
-<script src="http://wjpdeveloper.github.io/js/main.js"></script>
+<script type="text/javascript" src="https://wjpdeveloper.github.io/lib/jquery/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="https://wjpdeveloper.github.io/lib/slideout/slideout-1.0.1.min.js"></script>
+<script type="text/javascript" src="https://wjpdeveloper.github.io/lib/fancybox/jquery.fancybox-3.5.7.min.js"></script>
+<script src="https://wjpdeveloper.github.io/js/main.js"></script>
 
   </body>
 </html>
